# python-ordinary_least_squares

./: .gitignore  README.md  pyproject.toml
src/ordinary_least_squares/: __init__.py  main.py  model.py  summary.py
src/ordinary_least_squares/services/: fit.py  hypothesis_testing.py  inference_table.py  linear_fit.py  linear_predict.py  predict.py  robust_std_error.py  variance_inflation_factor.py
src/ordinary_least_squares/utils/: inference_table.py  input_validator.py  regression_output.py
src/py_regression_inference/: __init__.py  model.py
src/py_regression_inference/services/: fit.py  predict.py  robust_std_error.py  variance_inflation_factor.py
src/py_regression_inference/utils/: regression_output.py
src/regression_inference/: model.py
src/regression_inference/models/: model_fit.py  model_predict.py  model_robust_cov.py  model_vif.py
src/regression_inference/models/fit/: fit_linear.py  fit_logit.py  (+2 more)
src/regression_inference/services/: fit.py  fit_logit_multinomial_cuda.py  fit_logit_ordinal_cuda.py  model_fit.py  model_predict.py  model_robust_cov.py  model_vif.py  predict.py  robust_std_error.py
src/regression_inference/utils/: cuda_conversion.py  inference_table.py  regression_output.py  summary.py  table.py  validate.py
tests/: linear_regression_example.ipynb  logit_regression_example.ipynb  test_linearmodel.py
tests/notebooks/: linear_regression_example.ipynb  logistic_regression_example.ipynb  logit_regression_example.ipynb  multinomial_regression_example.ipynb  ordinal_logit_example.ipynb  ordinal_regression_example.ipynb
(+12 files in other folders)
