[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ordinary_least_squares"
version = "0.0.1"
authors = [
  { name="axtaylor", email="lucasataylor.dev@gmail.com" },
]
description = "Ordinary least squares utility"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2.4",
    "scipy>=1.15.2",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/axtaylor/python-ordinary_least_squares"
Issues = "https://github.com/axtaylor/python-ordinary_least_squares/issues"
