[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "py_regression_inference"
version = "0.0.2"
authors = [
  { name="axtaylor", email="lucasataylor.dev@gmail.com" },
]
description = "OLS and MLE regression inference package for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.15.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/axtaylor/python-ordinary_least_squares"
Issues = "https://github.com/axtaylor/python-ordinary_least_squares/issues"
